Fix overflow error to contact page by adding margin to class row

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -232,3 +232,8 @@ i {
 .icon-about {
   color: #fff;
 }
+
+.row {
+  margin-left: 1px;
+  margin-right: 1px;
+}
